Use templating and md for trainings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="/images/favicon.ico" />
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><img src="./images/logo.png" alt="Wescale - Cloud Expert logo" width="148" height="58" /></a>
+      <a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Wescale - Cloud Expert logo" width="148" height="58" /></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,7 +65,7 @@
     <div class="footer-top">
       <div class="alliance-xebia-wrapper">
         <div class="alliance-xebia">
-          <a href="http://alliance.xebia.fr"><img src="./images/logo-alliance-footer.jpg" alt="Alliance Xebia" width="78" height="79"></a>
+          <a href="http://alliance.xebia.fr"><img src="/images/logo-alliance-footer.jpg" alt="Alliance Xebia" width="78" height="79"></a>
           <a href="#" class="to-maps"><i class="fa fa-map-marker"></i></a>
         </div>
       </div>
@@ -108,7 +108,7 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyB-UJFheAfpcnYrOXJeDe3EfiTzm9cfRFU"></script>
 <script src="https://static.sekandocdn.net/static/feednami/feednami-client-v1.1.js"></script>
 <script src="http://momentjs.com/downloads/moment.min.js"></script>
