--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       <ul class="nav navbar-nav menu-links">
         <li><a href="/services.html">Services</a></li>
         <li><a href="/a-propos.html">À propos</a></li>
-        <li><a href="/partenariats.html">Partenariats</a></li>
+        <li><a href="/expertises.html">Expertises</a></li>
         <li><a href="http://blog.wescale.fr/">Blog</a></li>
         <li><a href="/formations.html">Formations</a></li>
         <li><a href="/contact.html">Contact</a></li>
