--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -20,7 +20,8 @@ layout: default
               </div>
 
               <div class="formation-block">
-                <a href="{{ page.pdf }}" class="button">Fiche PDF</a>
+                <a href="{{ page.pdf }}" class="button"><i class="fa fa-download" aria-hidden="true"></i>
+ Programme détaillé</a>
               </div>
 
               <div class="formation-block">
