--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><img src="{{ "/images/logo.png" | relative_url }}" alt="Wescale - Cloud Expert logo" width="148" height="58" /></a>
+      <a class="navbar-brand" href="{{"/"| relative_url }}"><img src="{{ "/images/logo.png" | relative_url }}" alt="Wescale - Cloud Expert logo" width="148" height="58" /></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
