Fix favicon with relative_url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
 
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="{{"/images/favicon.ico"|relative_url}}" />
 
     <!-- Bootstrap -->
     <link href="{{ "/css/bootstrap.min.css" | relative_url }}" rel="stylesheet">
