fix momentjs url to use // prefix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,7 +114,7 @@
 <script type="text/javascript" src="{{"/js/bootstrap.min.js" | relative_url }}"></script>
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyB-UJFheAfpcnYrOXJeDe3EfiTzm9cfRFU"></script>
 <script src="https://static.sekandocdn.net/static/feednami/feednami-client-v1.1.js"></script>
-<script src="http://momentjs.com/downloads/moment.min.js"></script>
+<script src="//momentjs.com/downloads/moment.min.js"></script>
 <script type="text/javascript">
   if (typeof jQuery === 'undefined') {
     throw new Error('Wescale\'s JavaScript requires jQuery')
