Use http instead of https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,7 +188,7 @@
 
           $(document).ready(function() {
 
-    var url = 'https://blog.wescale.fr/rss/';
+    var url = 'http://blog.wescale.fr/rss/';
     feednami.load(url,function(result){
         if(result.error) {
             console.log(result.error);
