Change designer fix wording and rework launch sections

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,9 +159,10 @@
       var e = [];
 
       var t = {
-        zoom:17,
+        zoom:14,
         mapTypeControl:false,
         center:wescale,
+        scrollwheel:false,
         mapTypeControlOptions:{mapTypeIds:[google.maps.MapTypeId.ROADMAP,MY_MAPTYPE_ID]},
         mapTypeId:MY_MAPTYPE_ID
       };
