Fix map and legend display for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,24 +67,23 @@
 <footer class="site-footer clearfix">
       <div id="map-wrapper">
 
-      <div id="map-canvas">
-             <div id="google_map">
-             </div>
-
-          <div class="container" style="position: absolute; top: 0px;">
-          <div class="row" style="padding: 90px 0px;">
-            <div class="col-xs-4">
-                <div id="map-legend">
-                    <h3>Wescale</h3>
-                    <p>156, boulevard Haussman<br/>75008 Paris</a></p>
-                    <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px"/> Miromesnil, St Philippe du Roule</p>
-                </div>
-                </div>
+          <div id="map-canvas">
+              <div id="google_map">
               </div>
-            </div>
 
-      </div>
-
+              <div class="container map-legend-container">
+                  <div class="row">
+                      <div class="col-xs-12 col-lg-4 col-md-4">
+                          <div id="map-legend">
+                              <h3>Wescale</h3>
+                              <p>156, boulevard Haussman<br/>75008 Paris</a></p>
+                              <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px"/> Miromesnil, St
+                                  Philippe du Roule</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
   </div>
 
   <div class="footer-wrapper-top">
